# neural_implementation

./: .clang-format  .clangd  .cursorignore  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  experiences.md  neural_build.sh
.cursor/rules/: RULE.md
docs/: BACKPROP_WALKTHROUGH.md  PLAN.md  README.md  SOURCES.md
docs/1.tensor/: API.md  BACKEND.md  README.md  TENSOR_N.md  TENSOR_VIEW_REF.md
docs/2.linear_layer/: THEORY.md
docs/3.activation/: THEORY.md
docs/4.optimizers/: THEORY.md
docs/5.cuda/: CUDNN_PLAN.md  PERFORMANCE.md  PLAN.md
docs/ideas/: CODEGEN_NETWORK_NO_DYNAMIC_ALLOC.md
include/: cifar_demo.hpp  cross_entropy_softmax_loss.hpp  cublas_handle.hpp  cuda_tensor.hpp  layer.hpp  layer_base.hpp  linear_layer.hpp  mnist_demo.hpp  mse_loss.hpp  neural_cuda_kernels.hpp  neural_cuda_runtime.hpp  neural_network.hpp  relu_layer.hpp  sequential_nn.hpp  sgd_optimizer.hpp  sigmoid_layer.hpp  softmax_layer.hpp  tensor.hpp  tensor_like.hpp  weight_debug.hpp
include/app/: cifar10_loader.hpp  conv_demo.hpp  conv_demo_cpu_small.hpp  conv_demo_cuda.hpp  conv_demo_cuda_small.hpp  conv_demo_momentum.hpp  conv_demo_refactor.hpp  conv_demo_refactor_ckpt.hpp  main.hpp  metrics.hpp  mnist_loader.hpp  tiny_conv2_linear_compare.hpp  training_epoch_progress_reporter.hpp  training_progress_bar.hpp
include/cuda/: cudnn_handle.hpp  neural_cuda_kernels.hpp  neural_cuda_layer_sync.hpp
include/image_processing/: image_augmentation.hpp
include/layers/: batch_norm_1d_layer.hpp  batch_norm_layer.hpp  conv_layer_variant.hpp  convolutional_box.hpp  convolutional_box_static.hpp  convolutional_layer.hpp  dropout_layer.hpp  flatten_layer.hpp  latch_layer.hpp  layer.hpp  layer_base.hpp  layer_properties.hpp  linear_layer.hpp  max_pool_layer.hpp  relu_layer.hpp  sigmoid_layer.hpp  softmax_layer.hpp  terminal_latch_layer.hpp
include/losses/: cross_entropy_softmax_loss.hpp  mse_loss.hpp
include/nn/: neural_network.hpp  sequential_nn.hpp  sequential_nn_static.hpp
include/optimizer/: cosine_scheduling.hpp  momentum_sgd_optimizer.hpp  sgd_optimizer.hpp
include/refactor/: batch_norm_layer.hpp  convolutional_layer.hpp  cross_entropy_loss.hpp  device.hpp  dropout_layer.hpp  dtype.hpp  latch_base.hpp  latch_layer.hpp  layer.hpp  layer_base.hpp  linear_layer.hpp  lr_schedule.hpp  max_pool_layer.hpp  metrics.hpp  momentum_sgd_optimizer.hpp  mse_loss.hpp  network.hpp  nn_io.hpp  nn_io_body.inl  relu_layer.hpp  sequential_nn.hpp  sgd_optimizer.hpp  sigmoid_layer.hpp  softmax_layer.hpp  training_scheduler.hpp
include/tensors/: cuda_mem.hpp  cuda_tensor.hpp  cuda_tensor_n.hpp  tensor.hpp  tensor_like.hpp  tensor_n.hpp
scripts/: cifar10_pytorch_same_arch_as_conv_demo_cuda.py  conv_demo_cuda_pytorch.py  conv_demo_cuda_small_pytorch.py  conv_demo_cuda_tensorflow.py  generate_pytorch_reference.py  generate_tiny_conv3_train_pytorch.py  parity_tiny_conv_pytorch.py  parity_tiny_pytorch.py  tiny_conv2_linear_compare_pytorch.py
src/: cifar_demo.cpp  cuda_runtime.cu  cuda_runtime_stub.cpp  main.cpp  mnist_demo.cpp  tensor.cpp
src/app/: cifar_demo.cpp  conv_demo.cpp  conv_demo_cpu_small.cpp  conv_demo_cuda.cpp  conv_demo_cuda_small.cpp  conv_demo_momentum.cpp  conv_demo_refactor.cpp  conv_demo_refactor_ckpt.cpp  main_signal.cpp  mnist_demo.cpp  tiny_conv2_linear_compare.cpp  training_epoch_progress_reporter.cpp  training_progress_bar.cpp
src/cuda/: cublas_handle.cpp  cuda_runtime.cu  cuda_runtime_stub.cpp  cudnn_handle.cpp
src/image_processing/: image_augmentation.cpp
src/optimizer/: cosine_scheduling.cpp
tests/: layer_wiring_helpers.hpp  test_batch_norm_1d_layer.cpp  test_batch_norm_1d_layer2.cpp  test_conv_backward.cpp  test_conv_net2.cpp  test_conv_net_momentum_dropout_cuda.cpp  test_convolutional_layer2.cpp  test_convolutional_layer_cuda.cpp  test_cross_entropy_pytorch.cpp  test_cuda_nn.cpp  test_cuda_runtime.cpp  test_cuda_tensor.cpp  test_cuda_tensor4.cpp  test_dropout_layer.cpp  test_dropout_layer2.cpp  test_latch2.cpp  test_linear_layer.cpp  test_linear_layer2.cpp  test_loss.cpp  test_max_pool_layer.cpp  test_max_pool_layer2.cpp  test_momentum_sgd2.cpp  test_momentum_sgd_pytorch.cpp  test_nn_serializer.cpp  test_parity_cpu.cpp  test_pytorch_reference.cpp  test_relu_layer.cpp  test_relu_layer2.cpp  test_sequential_conv_linear_cuda.cpp  test_sequential_nn.cpp  test_sequential_nn2.cpp  test_sgd_optimizer.cpp  test_sigmoid_layer.cpp  test_sigmoid_layer2.cpp  test_softmax_layer.cpp  test_softmax_layer2.cpp  test_tensor.cpp  test_tensor_helpers.hpp  test_tensor_n.cpp
